--- a/app/views/memos/show.html.erb
+++ b/app/views/memos/show.html.erb
@@ -26,7 +26,7 @@
 
     <%= form_with model: @memo, url: memos_path, local: true do |f| %>
       <%= render 'shared/error_messages', object: f.object %>
-      <div class="bg-white rounded-lg p-12">
+      <div class="content-box">
         <!-- フォームの内容 -->
         <%= render 'memo_content', f: f %>
       </div>
