--- a/app/views/memos/edit.html.erb
+++ b/app/views/memos/edit.html.erb
@@ -6,7 +6,7 @@
     <h1><%= t('.title') %></h1>
 
     <!-- 書き方例 -->
-    <button class="btn btn-outline btn-success mb-10" onclick="my_modal_3.showModal()"><%= t('.example') %></button>
+    <button class="btn btn-success mb-10" onclick="my_modal_3.showModal()"><%= t('.example') %></button>
     <%#= render "example" %> <!-- 書き方例 はヘッダーに記述のファイルを利用 -->
     <div class="content-box">
       <%= render "form", memo: @memo, form_url: memo_path(@memo) %>
