--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,5 +1,5 @@
 <footer class="position-absolute">
-  <nav class="grid grid-flow-col gap-8">
+  <nav class="grid grid-flow-col gap-4 md:gap-12 text-xs md:text-sm">
     <%= link_to t('shared._footer.terms'), terms_of_service_path, class: "link link-hover" %>
     <%= link_to t('shared._footer.privacy'), privacy_policy_path, class: "link link-hover" %>
     <%= link_to t('shared._footer.contact'), "https://forms.gle/B8L13hSeEwb19WFX8", class: "link link-hover" %>
