change: newページ　タブのサイズを小さく/topページ 説明文の文字サイズを小さく

--- a/app/views/memos/_tabs.html.erb
+++ b/app/views/memos/_tabs.html.erb
@@ -1,7 +1,7 @@
 <!-- 呼び出し元　memos/new -->
 <div class="my-6">
   <!-- タブ：感情一覧 -->
-  <div role="tablist" class="tabs tabs-lifted tabs-lg">
+  <div role="tablist" class="tabs tabs-lifted tabs-md md:tabs-lg">
     <% emotions = { 
       happy: { label: t('memos._tabs.happy'), color: "text-[#9d7abc]" },
       angry: { label: t('memos._tabs.angry'), color: "text-[#D62828]" },
