change: メインコンテンツの使用色変更

--- a/app/views/memos/_example.html.erb
+++ b/app/views/memos/_example.html.erb
@@ -1,12 +1,12 @@
 <!-- 呼び出し元 memos/new.html.erb, shared/_header.html.erb -->
 <dialog id="my_modal_3" class="modal">
 
-  <div class="modal-box max-w-5xl bg-[#F0D8A8] p-4">
+  <div class="modal-box max-w-5xl bg-[#F8F6F1] p-4">
     <div class="flex flex-wrap md:flex-nowrap">
 
       <!-- 左側モックアップ -->
-      <div class="mockup-window border-base-300 border w-full md:w-2/3" style="background: url('/assets/bg-fabric.jpg') repeat;">
-        <div class="border-base-300 flex justify-center border-t px-2">
+      <div class="mockup-window border-base-300 border w-full md:w-2/3" style="background: url('/bg-fabric.jpg') repeat;">
+        <div class="border-base-300 flex justify-center border-t">
           <div class="w-full text-center" style="transform: scale(0.95);">
 
             <div role="tablist" class="tabs tabs-lifted md:tabs-lg">
