--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -7,7 +7,7 @@
   }
 
   body {
-    background: url('/assets/bg-fabric.jpg') repeat, linear-gradient(to bottom, #f9f6f2, #d5bb99);
+    background: url('/assets/bg-fabric.jpg') repeat, linear-gradient(to bottom, #F8F6F0, #EEDFC9);
     font-family: 'Noto Sans JP', sans-serif;
     color: #423521; /* テキストカラー */
   }
@@ -36,11 +36,11 @@
   }
 
   .custom-header {
-    @apply navbar bg-[#F8F6F1] h-16 flex justify-between shadow text-[#280f1f];
+    @apply navbar bg-[#F8F6F1] h-16 flex justify-between text-[#280f1f];
   }
 
   .custom-footer {
-    @apply footer footer-center text-base-content rounded px-8 py-10 md:py-16 bottom-0 mx-auto bg-[#9e7f5a] text-[#fff9f2];
+    @apply footer footer-center text-base-content rounded px-8 py-10 md:py-16 bottom-0 mx-auto shadow-inner bg-[#9e7f5a] text-[#fff9f2];
   }
 
   /* メモ作成入力フォーム */
