--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -7,7 +7,7 @@
   }
 
   body {
-    background: url('/assets/bg-fabric.jpg') repeat, linear-gradient(to bottom, #F8F6F0, #EEDFC9);
+    background: url('bg-fabric.jpg') repeat, linear-gradient(to bottom, #F8F6F0, #EEDFC9);
     font-family: 'Noto Sans JP', sans-serif;
     color: #423521; /* テキストカラー */
   }
@@ -36,7 +36,7 @@
   }
 
   .custom-header {
-    @apply navbar bg-[#F9F0E8] h-16 flex justify-between text-[#280f1f];
+    @apply navbar bg-[#fcf6ef] h-16 flex justify-between text-[#280f1f];
   }
 
   .custom-footer {
