update: ヘッダーのXシェア機能 未ログイン時にも表示

--- a/app/views/memos/show.html.erb
+++ b/app/views/memos/show.html.erb
@@ -22,6 +22,7 @@
         target: "_blank", 
         rel: "noopener noreferrer", 
         href: "https://twitter.com/intent/tweet?text=#{CGI.escape(@share_text)}",
+        target: "_blank", 
         class: "mx-2" do %>
         <i class='fa-brands fa-x-twitter'></i>
       <% end %>
