--- a/app/views/shared/_header_before_login.html.erb
+++ b/app/views/shared/_header_before_login.html.erb
@@ -46,14 +46,19 @@
             </p>
           </div>
         </li>
-
-
         <li class="my-1">
           <!-- 使い方 -->
           <a onclick="my_modal_3.showModal()" class="flex items-center">
             <i class="fa-solid fa-person-circle-question"></i>
             <span><%= t('shared._header.how_to_use') %></span>
           </a> <!-- モーダルを開くリンク -->
+        </li>
+                <li class="my-1">
+          <!-- アプリをシェア -->
+          <%= link_to "https://twitter.com/intent/tweet?text=#{CGI.escape("一言ずつの入力で出来事を掘り下げてみよう🌱\n#{root_url}\n#MemoSprout")}", target: "_blank", rel: "noopener noreferrer", class: "flex items-center" do %>
+            <i class="fa-brands fa-x-twitter"></i>
+            <%= t('shared._header_before_login.share_app') %>
+          <% end %>
         </li>
 
       </ul>
